--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,5 +39,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     implementation 'com.google.firebase:firebase-analytics:17.2.0'
     implementation 'com.jakewharton.timber:timber:4.7.1'
+    implementation 'com.google.firebase:firebase-database:19.2.0'
 }
 apply plugin: 'com.google.gms.google-services'
