--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,9 +23,12 @@ android {
             debuggable true
         }
     }
+    buildToolsVersion = '28.0.3'
 }
 
 dependencies {
+    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'androidx.legacy:legacy-support-v13:1.0.0'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'com.google.android.material:material:1.0.0'
@@ -40,5 +43,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics:17.2.0'
     implementation 'com.jakewharton.timber:timber:4.7.1'
     implementation 'com.google.firebase:firebase-database:19.2.0'
+    implementation 'com.karumi:dexter:5.0.0'
 }
 apply plugin: 'com.google.gms.google-services'
