Junit Test Cases
implemented 5 test cases.
1. MainAcitvity
2. AccountSettingActivity - 2 test cases
3. Encrypter
4. UpdatePassword

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,5 +48,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage:19.1.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.firebase:firebase-client-android:2.5.0'
+    androidTestImplementation 'com.android.support.test:rules:1.0.2'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+    androidTestImplementation 'com.21buttons:fragment-test-rule:1.0.0'
 }
 apply plugin: 'com.google.gms.google-services'
